<resources>
    <string name="app_name">My Application</string>

    <string name="space"> </string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="cls">C</string>
    <string name="exp">√</string>
    <string name="parentesi">( )</string>
    <string name="div">÷</string>
    <string name="mul">×</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="neg">+/-</string>
    <string name="virgola">.</string>
    <string name="equals">=</string>

    <string name="spazio">  </string>
    <string name="display">Inserisci Un Valore</string>





</resources>